...
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="34Z-2n-vEe"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="OGj-10-mgZ"/>
                                            <constraint firstAttribute="width" secondItem="u9t-JB-KHx" secondAttribute="height" multiplier="1:1" id="ew1-B7-xoL"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                        <state key="normal" title="AC">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="3"/>
                                            </userDefinedRuntimeAttribute>
...
